# VOxMagic

./: .gitignore  Cargo.toml  README.md  build.ps1  build_release.ps1
src/: app.rs  audio.rs  config.rs  main.rs  settings.rs  transcriber.rs
